--- a/Download URL Pattern/Download URL Pattern/en.lproj/main.xib
+++ b/Download URL Pattern/Download URL Pattern/en.lproj/main.xib
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6206.9" systemVersion="14A343f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1070" identifier="macosx"/>
-        <development version="5000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6206.9"/>
-        <plugIn identifier="com.apple.automator.AutomatorPalette" version="6206.9"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
+        <plugIn identifier="com.apple.automator.AutomatorPalette" version="11762"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="Download_URL_Pattern">
@@ -18,7 +18,7 @@
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="100010">
-                    <rect key="frame" x="10" y="54" width="72" height="14"/>
+                    <rect key="frame" x="10" y="55" width="71" height="14"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="URL pattern:" id="100011">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -26,7 +26,7 @@
                     </textFieldCell>
                 </textField>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="100012">
-                    <rect key="frame" x="10" y="14" width="72" height="14"/>
+                    <rect key="frame" x="10" y="14" width="71" height="14"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Save to:" id="100013">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -34,7 +34,7 @@
                     </textFieldCell>
                 </textField>
                 <amTokenField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="100014">
-                    <rect key="frame" x="88" y="52" width="303" height="19"/>
+                    <rect key="frame" x="87" y="52" width="304" height="19"/>
                     <amTokenFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" allowsEditingTextAttributes="YES" id="100015">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -49,7 +49,7 @@
                     </connections>
                 </amTokenField>
                 <textField horizontalHuggingPriority="200" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="100016">
-                    <rect key="frame" x="86" y="38" width="307" height="11"/>
+                    <rect key="frame" x="85" y="38" width="308" height="11"/>
                     <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Use brackets to indicate number ranges, for example: file[00-09].jpg" id="100017">
                         <font key="font" metaFont="miniSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -57,7 +57,7 @@
                     </textFieldCell>
                 </textField>
                 <amPathPopUpButton verticalHuggingPriority="750" canChooseDirectories="YES" canChooseNewPaths="YES" canChooseExistingPaths="YES" showStandardPaths="YES" placeholder="" translatesAutoresizingMaskIntoConstraints="NO" id="100018">
-                    <rect key="frame" x="85" y="9" width="119" height="22"/>
+                    <rect key="frame" x="84" y="9" width="119" height="22"/>
                     <amVariablePopUpButtonCell key="cell" type="push" title="Desktop" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="1001" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="100019">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="smallSystem"/>
@@ -67,23 +67,12 @@
                         <binding destination="6" name="path" keyPath="selection.downloadPath" id="100024"/>
                     </connections>
                 </amPathPopUpButton>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="100026" customClass="JUNButton">
-                    <rect key="frame" x="372" y="6" width="25" height="32"/>
-                    <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="donate" imagePosition="only" alignment="center" alternateImage="donate-red" inset="2" id="100027" customClass="JUNButtonCell">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="openSite:" target="-2" id="100028"/>
-                    </connections>
-                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="100014" firstAttribute="top" secondItem="5" secondAttribute="top" constant="12" id="1es-sr-Q7c"/>
                 <constraint firstItem="100010" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="12" id="EvN-cy-LxL"/>
                 <constraint firstItem="100016" firstAttribute="leading" secondItem="100014" secondAttribute="leading" id="GmC-9D-9vG"/>
                 <constraint firstItem="100014" firstAttribute="baseline" secondItem="100010" secondAttribute="baseline" id="HEK-op-RYs"/>
-                <constraint firstAttribute="bottom" secondItem="100026" secondAttribute="bottom" constant="6" id="Rew-yD-7Uc"/>
                 <constraint firstItem="100016" firstAttribute="trailing" secondItem="100014" secondAttribute="trailing" id="Wro-NW-wHn"/>
                 <constraint firstItem="100014" firstAttribute="leading" secondItem="100010" secondAttribute="trailing" constant="8" symbolic="YES" id="Ww7-mu-efS"/>
                 <constraint firstAttribute="trailing" secondItem="100014" secondAttribute="trailing" constant="12" id="X6v-L7-5lC"/>
@@ -92,10 +81,9 @@
                 <constraint firstItem="100012" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="12" id="aQS-LV-6vL"/>
                 <constraint firstItem="100018" firstAttribute="leading" secondItem="100014" secondAttribute="leading" id="dvn-cU-3ST"/>
                 <constraint firstItem="100016" firstAttribute="top" secondItem="100014" secondAttribute="bottom" constant="3" id="kLm-uT-IFC"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="100018" secondAttribute="trailing" constant="12" id="pUb-zq-PLN"/>
                 <constraint firstItem="100018" firstAttribute="top" secondItem="100016" secondAttribute="bottom" constant="8" symbolic="YES" id="pfQ-Im-UZr"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="100018" secondAttribute="bottom" constant="12" id="r2f-C2-H75"/>
-                <constraint firstItem="100026" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="100018" secondAttribute="trailing" constant="6" id="u6z-I8-ics"/>
-                <constraint firstAttribute="trailing" secondItem="100026" secondAttribute="trailing" constant="6" id="wya-iI-r3P"/>
             </constraints>
             <point key="canvasLocation" x="-21.5" y="287.5"/>
         </customView>
@@ -106,8 +94,4 @@
         </objectController>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
     </objects>
-    <resources>
-        <image name="donate" width="25" height="25"/>
-        <image name="donate-red" width="25" height="25"/>
-    </resources>
 </document>
