Rename services to optional services

--- a/Junecloud Automator Actions/Base.lproj/Main.storyboard
+++ b/Junecloud Automator Actions/Base.lproj/Main.storyboard
@@ -406,8 +406,8 @@
                                 <rect key="frame" x="20" y="267" width="306" height="5"/>
                             </box>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="paW-cm-aaN">
-                                <rect key="frame" x="18" y="230" width="70" height="19"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Services" id="Mwy-qD-zSR">
+                                <rect key="frame" x="18" y="230" width="138" height="19"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Optional Services" id="Mwy-qD-zSR">
                                     <font key="font" metaFont="systemSemibold" size="16"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
