--- a/Junecloud Automator Actions/Base.lproj/Main.storyboard
+++ b/Junecloud Automator Actions/Base.lproj/Main.storyboard
@@ -356,7 +356,7 @@
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController storyboardIdentifier="instructionsWindow" id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="instructionsWindow" id="B8D-0N-5wS" customClass="WindowController" customModule="Junecloud_Automator_Actions" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Instructions" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" tabbingMode="disallowed" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
