--- a/Junecloud Toolbox/Base.lproj/Main.storyboard
+++ b/Junecloud Toolbox/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                                         <menuItem title="About Junecloud Toolbox" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
-                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
+                                                <action selector="showAbout:" target="Voe-Tx-rLC" id="fPi-rp-M61"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
